1.0.0 - currently working on

Features:

Bug fixes:
- [#5235] Explicitly provide the configuration check namespaces
- [#5389] Crash when confirming/canceling an event with time-slots
- [#5416] Relax the static_info_tables version dependencies
- [#5402] Add link to bug tracker
- [#5400] Allow more than 22 pages in the flexforms
- [#5321] Update .htaccess to be Apache 2.4 compatible

Cleanup:
- [#5479] Rename tx_oelib_Exception_EmptyQueryResult to Tx_Oelib_Exception_EmptyQueryResult
- [#5478] Rename tx_oelib_Exception_Database to Tx_Oelib_Exception_Database
- [#5468] Rename tx_oelib_headerProxyFactory to Tx_Oelib_HeaderProxyFactory
- [#5470] Rename tx_oelib_Time to Tx_Oelib_Time
- [#5466] Move the back-end CSS file to Resources/Public
- [#5460] Clean up the use of FlashMessageService
- [#5417] Require static_info_tables >= 6.2.0
- [#5408] Drop version-specific code and class_exists
- [#5407] Drop the old XCLASS footers

Changes:
- [#5481] Set 7.9.99 as maximum TYPO3 version
- [#5476] Change tx_oelib_db to Tx_Oelib_Db
- [#5475] Change tx_oelib_configcheck to Tx_Oelib_ConfigCheck
- [#5474] Change tx_oelib_testingFramework to Tx_Oelib_TestingFramework
- [#5473] Change tx_oelib_configurationProxy to Tx_Oelib_ConfigurationProxy
- [#5465] Change tslib_feUserAuth to \TYPO3\CMS\Frontend\Authentication\FrontendUserAuthentication
- [#5464] Change t3lib_refindex to \TYPO3\CMS\Core\Database\ReferenceIndex
- [#5463] Change t3lib_TCEmain to \TYPO3\CMS\Core\DataHandling\DataHandler
- [#5462] Change t3lib_l10n_parser_Llxml to LocallangXmlParser
- [#5451] Rename tx_oelib_Model_FrontEndUser to Tx_Oelib_Model_FrontEndUser
- [#5447] Rename tx_oelib_Interface_MailRole to Tx_Oelib_Interface_MailRole
- [#5438] Change tslib_cObj to ContentObjectRenderer
- [#5437] Change tslib_pibase to \TYPO3\CMS\Frontend\Plugin\AbstractPlugin
- [#5428] Change t3lib_TimeTrackNull to NullTimeTracker
- [#5436] Change t3lib_cs to \TYPO3\CMS\Core\Charset\CharsetConverter